index.html: Header finalizado.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
                     <a href="tienda.html" class="navegacion__enlace">Tienda</a>
                 </nav>
             </div>
-
         </div>
+
+        <div class="modelo">
+            <h1 class="modelo__nombre">Modelo VAI</h1>
+            <p class="modelo__descricpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusamus quia praesentium tenetur quisquam illo fuga accusantium numquam vero sit iusto, quae</p>
+            <p class="modelo__precio">$399.00</p>
+            <a href="producto.html" class="modelo__enlace">Ver Producto</a>
+        </div>
+        <img src="img/header_guitarra.png" alt="Imagen Header Guitarra" class="header__guitarra">
     </header>
 
 </body>
