--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="tienda.html" class="navegacion__enlace">Tienda</a>
                 </nav>
             </div>
-            
+
             <div class="modelo">
                 <h1 class="modelo__nombre">Modelo VAI</h1>
                 <p class="modelo__descricpion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusamus quia praesentium tenetur quisquam illo fuga accusantium numquam vero sit iusto, quae</p>
@@ -37,6 +37,121 @@
         </div>
 
     </header>
+
+    <main class="productos productos__contenedor">
+        <h2 class="productos__heading">Nuestra Colección</h2>
+
+        <div class="productos__grid">
+            <div class="producto">
+                <img src="img/guitarra_01.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Lukather</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_02.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">SRV</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_03.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Borland</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_04.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">VAI</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_05.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Thompson</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_06.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">White</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_07.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Cobain</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_08.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Dale</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_09.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Krieger</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_10.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Campbell</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_11.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Reed</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+
+            <div class="producto">
+                <img src="img/guitarra_12.jpg" alt="Imagen Guitarra" class="producto__imagen">
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Hazel</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga deserunt ex labore totam place</p>
+                    <p class="producto__precio">$299.00</p>
+                    <a href="producto.html" class="producto__enlace">Ver producto</a>
+                </div> <!--.producto-->
+            </div><!--.producto_grid--> 
+        </div>
+    </main>
 
 </body>
 </html>
