index.html: Section Cursos agregada

--- a/index.html
+++ b/index.html
@@ -164,5 +164,15 @@
         </div><!--.producto_grid-->
     </main>
 
+    <section class="cursos">
+        <div class="cursos__contenedor cursos__grid">
+            <div class="cursos__contenido">
+                <h2 class="cursos__heading">Aprende a tocar guitarra</h2>
+                <p class="cursos__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, praesentium. Itaque nam tempore voluptatem enim quis libero sunt laboriosam consequatur eos amet, eius officiis dignissimos aliquam. Voluptate esse quod deleniti!</p>
+                <a href="#" class="cursos__enlace">Más información</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
