--- a/index.html
+++ b/index.html
@@ -174,5 +174,51 @@
         </div>
     </section>
 
+    <section class="blog">
+        <h2 class="blog__heading">Nuestro Blog</h2>
+        <div class="blog__contenedor blog__grid">
+            <article class="entrada">
+                <img src="img/blog_1.jpg" alt="Imagen Blog" class="entrada__imagen">
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Cómo elegir tu primer guitarra?</h3>
+                    <p class="entrada__fecha">15 de Marzo de 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores suscipit hic placeat soluta! Repellendus ad sequi eligendi tenetur sapiente laborum reiciendis, porro temporibus rerum officiis nemo aliquam voluptatem qui labore.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <img src="img/blog_2.jpg" alt="Imagen Blog" class="entrada__imagen">
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Cómo elegir tu primer guitarra?</h3>
+                    <p class="entrada__fecha">15 de Marzo de 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores suscipit hic placeat soluta! Repellendus ad sequi eligendi tenetur sapiente laborum reiciendis, porro temporibus rerum officiis nemo aliquam voluptatem qui labore.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <img src="img/blog_3.jpg" alt="Imagen Blog" class="entrada__imagen">
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Cómo elegir tu primer guitarra?</h3>
+                    <p class="entrada__fecha">15 de Marzo de 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores suscipit hic placeat soluta! Repellendus ad sequi eligendi tenetur sapiente laborum reiciendis, porro temporibus rerum officiis nemo aliquam voluptatem qui labore.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <img src="img/blog_4.jpg" alt="Imagen Blog" class="entrada__imagen">
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Cómo elegir tu primer guitarra?</h3>
+                    <p class="entrada__fecha">15 de Marzo de 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores suscipit hic placeat soluta! Repellendus ad sequi eligendi tenetur sapiente laborum reiciendis, porro temporibus rerum officiis nemo aliquam voluptatem qui labore.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer entrada</a>
+                </div>
+            </article>
+        </div>
+    </section>
+
 </body>
 </html>
