app.css: footer finalizado

--- a/index.html
+++ b/index.html
@@ -220,5 +220,18 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="footer__contenedor footer__grid">
+            <nav class="footer__nav">
+                <a href="index.html" class="footer__enlace">Inicio</a>
+                <a href="nosotros.html" class="footer__enlace">Nosotros</a>
+                <a href="blog.html" class="footer__enlace">Blog</a>
+                <a href="tienda.html" class="footer__enlace">Tienda</a>
+            </nav>
+
+            <p class="footer__copyright">Todos los derechos reservados</p>
+        </div>
+    </footer>
+
 </body>
 </html>
